--- a/index.html
+++ b/index.html
@@ -241,6 +241,13 @@ input[type="text" i] {
       </g>
     </svg>
   </div>
+  <div id="coordinates" style="background-color: RGB(70,70,70);background-color: RGB(0,0,0,0.6);color:RGB(170,170,170); position: absolute; display: initial; left: 0px; top: 0px;">
+    pan:
+    <input id="pan" type="text" value="0+0i" style="background:none; border:none;" size="50"/>
+    <br/>
+    zoom:
+    <input id="zoom" type="text" value="1" style="background:none; border:none;" size="28"/>
+  </div>
 
   <script>
     //https://github.com/tc39/proposal-regex-escaping/blob/main/specInJs.js
@@ -1020,6 +1027,9 @@ input[type="text" i] {
 	lerpto(o,t){
 	    return new vec2(lerp(this.x,o.x,t),lerp(this.y,o.y,t));
 	}
+        ctostring(){
+            return (""+this.y).startsWith("-")? this.x+"-i"+(-this.y):this.x+"+i"+this.y;
+        }
     }
     function lerp(a,b,t){
 	return a*(1-t)+b*t;
@@ -1992,6 +2002,31 @@ input[type="text" i] {
         gen.next();
         setTimeout(frame,100);
     }
+    const panInput = document.getElementById("pan");
+    const zoomInput = document.getElementById("zoom");
+    let coordsLive = true;
+    const coords = document.getElementById("coordinates");
+    panInput.addEventListener("input",(e)=>{
+        const r = /([+-]?(([0-9]*\.[0-9]*)|([0-9]+))([eE][+-]?[0-9]+)?)\s*,?\s*([+-]i?(([0-9]*\.[0-9]*)|([0-9]+))([eE][+-]?[0-9]+)?)/;
+        const m = panInput.value.match(r);
+        coordsLive = false;
+        if (m === null) return;
+        pan = new vec2(parseFloat(m[0]),parseFloat(m[6].replace(/[iI]/,"")));
+    });
+    zoomInput.addEventListener("input",(e)=>{
+        const r = /([+-]?(([0-9]*\.[0-9]*)|([0-9]+))([eE][+-]?[0-9]+)?)/;
+        const m = zoomInput.value.match(r);
+        coordsLive = false;
+        if (m === null) return;
+        const z = parseFloat(m);
+        if (z !== 0){
+            zoom = zoom.scale(z/zoom.mag());
+        }
+    });
+    for (const k of ["paste","mousemove","mousedown","dblclick","click"]){
+        panInput.addEventListener(k,(e)=>{cancel(e);})
+        zoomInput.addEventListener(k,(e)=>{cancel(e);})
+    }
     //frame();
     var mousePathPos;
     var current_time = undefined;
@@ -2015,6 +2050,12 @@ input[type="text" i] {
         }
 	//zoom = zoom.scale(0.9).plus(zoom_to.scale(0.1));
 	//pan = pan.scale(0.9).plus(pan_to.scale(0.1));
+        if (coordsLive){
+            panInput.value = pan.ctostring();
+            zoomInput.value = zoom.mag()+"";
+        }
+        //const inpColor = scol(Math.log(zoom.mag()),undefined,64,128);
+        //coords.style.color = inpColor;
 	updateViewbox();
         if (mousePath == ""){
 	    mousePathPos = toZ(mousePos);
@@ -2080,8 +2121,8 @@ input[type="text" i] {
     
 
     addEventListener('wheel', (event) => {
-        autopilotSpeed = 0;
         if (event.getModifierState(settings.rotateModifier)){
+            autopilotSpeed = 0;coordsLive = true;
             let amount = event.wheelDelta*settings.rotateModifierSpeed;
             let p = toZ(new vec2(event.pageX,event.pageY));
             let zc = p.minus(pan);
@@ -2096,6 +2137,7 @@ input[type="text" i] {
             return;
         }
 	if (settings.scroll === "zoom"){
+            autopilotSpeed = 0;coordsLive = true;
 	    let dest = toZ(mousePos);
 	    regenAmount += Math.abs(event.wheelDelta);
 	    let amount = Math.exp(event.wheelDelta*settings.zoomSpeed);
@@ -2103,6 +2145,7 @@ input[type="text" i] {
 	    pan = dest.scale(1-amount).plus(pan.scale(amount));
 	    cancel(event);
 	}else if (settings.scroll === "pan"){
+            autopilotSpeed = 0;coordsLive = true;
 	    let dest = toZ(mousePos);
 	    let dp;
 	    let amount;
@@ -2137,7 +2180,7 @@ input[type="text" i] {
     });
     addEventListener("mousemove", (event) => {
 	if (mouseDown){
-            autopilotSpeed = 0
+            autopilotSpeed = 0; coordsLive = true;
 	    let delta = mousePos.minus(mouseDownPos);
 	    pan = pan.minus(toDZ(delta));
 	    regenAmount += delta.mag()*0.25;
