fix window's zoom button

--- a/index.html
+++ b/index.html
@@ -1482,7 +1482,7 @@ e.onmouseleave();
         ui(fs,(()=>{
             node.zoom_to_fit();
             zoomTo = zoomTo.scale(1.0625);
-            autopilotSpeed=settings.autoPilotSpeed;
+            autopilotSpeed=settings.autopilotSpeed;
         }));
         ui(col,(()=>{}),"stroke");
 	
