--- a/index.html
+++ b/index.html
@@ -744,8 +744,8 @@
 
 <body id="body">
 
-    <div ondragover="dragOverHandler(event);" ondrop="dropHandler(event);" style="width: 100%; height: 100vh; overflow: hidden;">
-        <svg id="svg_bg" viewBox="-128 -128 256 256" style="width: 100%; height: 100%;">
+    <div ondragover="dragOverHandler(event);" ondrop="dropHandler(event);">
+        <svg id="svg_bg" viewBox="-128 -128 256 256" width="100%" height="100vh" top="0" left="0" position="fixed">
             <title>Mandelbrot</title>
             <g id="viewmatrix">
                 <g id="bg" />
@@ -4684,41 +4684,41 @@
         const refTag = document.getElementById("ref-tag").value;
 
         const zettelkastenPrompt = `You are an ai whos responses are being visualized within a fractal mind-map which serves as the cognitive architecture for storing and searching your memories. The website is called Neurite.
-                  - Follow the node reference tag format. This format is what enables you to connect ideas in a way that is visualized to the user.
+                      - Follow the node reference tag format. This format is what enables you to connect ideas in a way that is visualized to the user.
 Use the below style guidelines to format your response. Do not include the following instructions in your response to the user:
 Remember, always use the format below to style your responses.
 
-                        Prompt: Create a single node which describes how to create nodes.
+                            Prompt: Create a single node which describes how to create nodes.
 
-                        Format:
-                        ${nodeTag} (insert a unique, relevant, and descriptive node title)
-                           - Write the plain text response below the node title in any style
-                           - Provide a clear, concise, and explanation of a key idea, then move on to defining the references for that idea, then move on to creating new nodes. This will result in your response breaking up into multiple nodes.
-                           - Instaed of replying with single node to represent your thought, break your response up into multiple connected nodes that represent your chain of thought.
-                           - for example, you can represent a dialogue by having the titles for each node represent a character, and the plain text could be an instance of their dialogue.
+                            Format:
+                            ${nodeTag} (insert a unique, relevant, and descriptive node title)
+                               - Write the plain text response below the node title in any style
+                               - Provide a clear, concise, and explanation of a key idea, then move on to defining the references for that idea, then move on to creating new nodes. This will result in your response breaking up into multiple nodes.
+                               - Instaed of replying with single node to represent your thought, break your response up into multiple connected nodes that represent your chain of thought.
+                               - for example, you can represent a dialogue by having the titles for each node represent a character, and the plain text could be an instance of their dialogue.
 
-                        ${refTag} (to connect nodes, print the exact titles of nodes to connect to this node seperated by commas)
-                           - Connect the response to other related nodes using reference tags. If the user asks for certain nodes to be connected, make sure the proper ref tags are included to connect your response to the specified nodes.
-                           - Use the exact node titles of the related nodes for reference tags.
+                            ${refTag} (to connect nodes, print the exact titles of nodes to connect to this node seperated by commas)
+                               - Connect the response to other related nodes using reference tags. If the user asks for certain nodes to be connected, make sure the proper ref tags are included to connect your response to the specified nodes.
+                               - Use the exact node titles of the related nodes for reference tags.
 
-                        Example:
+                            Example:
 
-                        Prompt
-                        Create a triangle.
+                            Prompt
+                            Create a triangle.
 
-                        ${nodeTag} Point 1
-                        This is the first point in our triangle.
-                        ${refTag}
+                            ${nodeTag} Point 1
+                            This is the first point in our triangle.
+                            ${refTag}
 
-                        ${nodeTag} Point 2
-                        This point is second.
-                        ${refTag} title1
+                            ${nodeTag} Point 2
+                            This point is second.
+                            ${refTag} title1
 
-                        ${nodeTag} Point 3
-                        You can say anything here relevant to the user memssage. Make sure not to overfill the plain text. Instead, chunk you ideas into relevant node structures.
-                        ${refTag} title2, title 1 //take note of how circles could be made in the same way.
+                            ${nodeTag} Point 3
+                            You can say anything here relevant to the user memssage. Make sure not to overfill the plain text. Instead, chunk you ideas into relevant node structures.
+                            ${refTag} title2, title 1 //take note of how circles could be made in the same way.
 
-                        Efficiently condense the most salient ideas into a response that contructs a chain of-thought reasoning within the node reference tag format described above. This is a system prompt`;
+                            Efficiently condense the most salient ideas into a response that contructs a chain of-thought reasoning within the node reference tag format described above. This is a system prompt`;
 
 
         const spatialAwarenessExample = `${nodeTag} Central Node
@@ -5181,31 +5181,31 @@ Make sure to exclusivly reference the above described controls. Try not to make 
                 {
                     role: "user",
                     content: `Your self-prompt: ${autoModeMessage}
-                    Original prompt: ${originalUserMessage}
-                    Example of the desired format for your response with up to date node and reference tags.
-                    ${nodeTag} Unique title
-                    plain text on the next line for your response.
-                    ${refTag} Titles of other nodes separated by commas.
-                    ${nodeTag} Example 
-                    Break your response up into multiple nodes 
-                    Evaluate your previous response and build of the most correct nodes.
-                    Never reference the instructions for the format of your response unless asked.
-                        ${refTag} Repeat titles to connect nodes.
-                    Always end your response with a new line, then, Prompt: [the prompt to continue the conversation (consider if the original goal has been accomplished while also progressing the conversation in new directions)]`,
+                        Original prompt: ${originalUserMessage}
+                        Example of the desired format for your response with up to date node and reference tags.
+                        ${nodeTag} Unique title
+                        plain text on the next line for your response.
+                        ${refTag} Titles of other nodes separated by commas.
+                        ${nodeTag} Example
+                        Break your response up into multiple nodes
+                        Evaluate your previous response and build of the most correct nodes.
+                        Never reference the instructions for the format of your response unless asked.
+                            ${refTag} Repeat titles to connect nodes.
+                        Always end your response with a new line, then, Prompt: [the prompt to continue the conversation (consider if the original goal has been accomplished while also progressing the conversation in new directions)]`,
                 } :
                 {
                     role: "user",
                     content: `User Message: ${message}
-                    Example of the desired format for your response with up to date node and reference tags.
-                    ${nodeTag} Unique Title
-                    plain text on the next line for your response.
-                    ${refTag} Titles of other nodes separated by commas.
-                    ${nodeTag} Example
-                    Break your response up into multiple nodes
-                    Evaluate your previous response and build of the most correct nodes.
-                    Never reference the instructions for the format of your response unless asked.
-                        ${refTag} Repeat titles to connect nodes.
-                    ${isAutoModeEnabled ? "Always end your response with a new line, then, Prompt: [the prompt to continue the conversation]" : ""}`,
+                        Example of the desired format for your response with up to date node and reference tags.
+                        ${nodeTag} Unique Title
+                        plain text on the next line for your response.
+                        ${refTag} Titles of other nodes separated by commas.
+                        ${nodeTag} Example
+                        Break your response up into multiple nodes
+                        Evaluate your previous response and build of the most correct nodes.
+                        Never reference the instructions for the format of your response unless asked.
+                            ${refTag} Repeat titles to connect nodes.
+                        ${isAutoModeEnabled ? "Always end your response with a new line, then, Prompt: [the prompt to continue the conversation]" : ""}`,
                 },
             ];
 
@@ -6005,7 +6005,7 @@ Make sure to exclusivly reference the above described controls. Try not to make 
 
             return node;
         }
-        
+
         function observeContentResize(windowDiv, iframeWrapper, displayWrapper) {
             const resizeObserver = new ResizeObserver((entries) => {
                 for (let entry of entries) {
